--- a/frontEndClient/src/app/app.component.html
+++ b/frontEndClient/src/app/app.component.html
@@ -8,6 +8,7 @@
             <li class="list-inline-item"><a routerLink="/transactions" class="btn btn-info">List Transactions</a></li>
             <li class="list-inline-item"><a routerLink="/account" class="btn btn-info">Add account</a></li>
             <li class="list-inline-item"><a routerLink="/uploadcsv" class="btn btn-info">Upload CSV</a></li>
+            <li class="list-inline-item"><a routerLink="/accountoverview" class="btn btn-info">Account Overview</a> </li>
           </ul>
         </div>
       </div>
