--- a/frontEndClient/src/app/components/csv-upload/csv-upload.component.html
+++ b/frontEndClient/src/app/components/csv-upload/csv-upload.component.html
@@ -10,6 +10,7 @@
     <th scope="col">Amount</th>
     <th scope="col">Date</th>
     <th scope="col">Transaction Type</th>
+    <th scope="col">Description</th>
   </tr>
   </thead>
   <tbody>
@@ -18,6 +19,7 @@
     <td>{{ transaction.amount}}</td>
     <td>{{ transaction.transactionDate}}</td>
     <td>{{ transaction.type}}</td>
+    <td>{{ transaction.description}}</td>
   </tr>
   </tbody>
 </table>
