Add mat view table

--- a/frontEndClient/src/app/components/account-overview/account-overview.component.html
+++ b/frontEndClient/src/app/components/account-overview/account-overview.component.html
@@ -1,3 +1,10 @@
-<p>
-   Account Balance = {{balance}}
-</p>
+<mat-card class="mat-card">
+  <mat-card-header >
+    <mat-card-title>{{accountName}} Balance</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p class="mat-card-content">
+      Account Balance = {{balance}}
+    </p>
+  </mat-card-content>
+</mat-card>
