--- a/frontEndClient/src/styles.scss
+++ b/frontEndClient/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/_theming.scss';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@include mat-core();
+
+
