--- a/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
@@ -27,27 +27,31 @@
         </form>
   </div>
   <div class="example-container mat-elevation-z8">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   <table mat-table [dataSource]="datasource" matSort (matSortChange)="sortData($event)">
 
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="transactionDate">Transaction Date Description</th>
-      <td mat-cell *matCellDef="let element">{{element.transactionDate | date}} </td>
+      <td mat-cell *matCellDef="let element">{{element.transactionDate | date}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="description">Description</th>
-      <td mat-cell *matCellDef="let element">{{element.description}} </td>
+      <td mat-cell *matCellDef="let element">{{element.description}}</td>
     </ng-container>
 
 
     <ng-container matColumnDef="Type">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="type">Transaction Type </th>
-      <td mat-cell *matCellDef="let element">{{element.type}} </td>
+      <td mat-cell *matCellDef="let element">{{element.type}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Amount">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="amount">Amount</th>
-      <td mat-cell *matCellDef="let element">{{element.amount | currency}} </td>
+      <td mat-cell *matCellDef="let element">{{element.amount | currency}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -55,51 +59,3 @@
   </table>
   </div>
 </div>
-<!--<div class="card my-5">-->
-<!--  <div class="card-body">-->
-
-<!--    <form [formGroup]="newTransactionForm" >-->
-<!--      <div class="row">-->
-<!--        <div class="col">-->
-<!--          <input type="name" required="true" formControlName="description" class="form-control" id="transactionDescription" placeholder="Enter Description">-->
-<!--        </div>-->
-<!--        <div class="col">-->
-<!--          <input type="date" required="true" formControlName="transactionDate" class="form-control" id="transactionDate" placeholder="Date">-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="row">-->
-<!--        <div class="col">-->
-<!--          <input type="number" required="true" formControlName="transactionAmount" class="form-control" id="amount" placeholder="Enter Transaction Amount">-->
-<!--        </div>-->
-<!--        <div class="col">-->
-<!--          <button type="sumbit" (click)="addExpense()" class="btn ntn-primary mb-2">Add Expense</button>-->
-<!--        </div>-->
-<!--        <div class="col">-->
-<!--          <button type="sumbit" (click)="addIncome()" class="btn ntn-primary mb-2">Add Income</button>-->
-<!--        </div>-->
-<!--        <div class="col">-->
-<!--          <button type="sumbit" (click)="addBalance()" class="btn ntn-primary mb-2">Add Balance</button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </form>-->
-
-<!--  <table class="table table-bordered table-striped">-->
-<!--      <thead class="thead-dark">-->
-<!--      <tr>-->
-<!--        <th scope="col">Date</th>-->
-<!--        <th scope="col">Transaction Type</th>-->
-<!--        <th scope="col">Description</th>-->
-<!--        <th scope="col">Amount</th>-->
-<!--      </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--      <tr *ngFor="let transaction of transactions">-->
-<!--        <td>{{ transaction.transactionDate.substr(0, 10)}}</td>-->
-<!--        <td>{{ transaction.type}}</td>-->
-<!--        <td>{{ transaction.description }}</td>-->
-<!--        <td>${{ transaction.amount}}</td>-->
-<!--      </tr>-->
-<!--      </tbody>-->
-<!--    </table>-->
-<!--  </div>-->
-<!--</div>-->
