--- a/frontEndClient/src/app/components/transaction-list/transaction-list.component.scss
+++ b/frontEndClient/src/app/components/transaction-list/transaction-list.component.scss
@@ -15,3 +15,14 @@ th.mat-sort-header-sorted {
   font-size: 14px;
   width: 100%;
 }
+
+.example-form {
+   min-width: 150px;
+   max-width: 500px;
+   width: 100%;
+ }
+
+.button-row button,
+.button-row a {
+  margin-right: 8px;
+}
