--- a/frontEndClient/src/app/components/account-overview/account-overview.component.html
+++ b/frontEndClient/src/app/components/account-overview/account-overview.component.html
@@ -1,3 +1,12 @@
+<mat-form-field>
+  <mat-label>Select Account</mat-label>
+  <mat-select required name="account_info" (selectionChange)="selectAccount(selectedAccount)" [(ngModel)]="selectedAccount">
+    <mat-option *ngFor="let account of accountList" [value]="account.id">{{account.name}}</mat-option>
+<!--    <mat-option value="income">Income</mat-option>-->
+<!--    <mat-option value="expense">Expense</mat-option>-->
+<!--    <mat-option value="balance">Balance Update</mat-option>-->
+  </mat-select>
+</mat-form-field>
 <mat-card class="mat-card">
   <mat-card-header >
     <mat-card-title>{{accountName}} Balance</mat-card-title>
@@ -8,3 +17,6 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div class="chart-area">
+  <google-chart class="chart-area" [title]="'Account Balance Over Time'" [type]="'LineChart'" [data]="dailyBalance" [columnNames]="columnNames"></google-chart>
+</div>
