--- a/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
@@ -33,7 +33,7 @@
         </td>
         <td>
           <div>
-            <button mat-raised-button [color]="primary">Add Transaction</button>
+            <button mat-raised-button color="primary">Add Transaction</button>
           </div>
         </td>
       </tr>
