initial pie chart

--- a/frontEndClient/src/app/app.component.html
+++ b/frontEndClient/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1 class="example-app-name">Personal Finance Overview</h1>
   </mat-toolbar>
   <mat-sidenav-container class="example-container">
-    <mat-sidenav #sidenav mode="side" opened class="example-sidenav">
+    <mat-sidenav mode="side" opened class="example-sidenav">
       <mat-nav-list>
         <a mat-list-item routerLink="/accountoverview">Account Overview</a>
         <a mat-list-item routerLink="/transactions">List Transactions</a>
