--- a/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
@@ -43,7 +43,7 @@
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
     <table mat-table [dataSource]="datasource" matSort (matSortChange)="sortData($event)">
 
       <ng-container matColumnDef="Date">
