--- a/frontEndClient/src/app/components/csv-upload/csv-upload.component.html
+++ b/frontEndClient/src/app/components/csv-upload/csv-upload.component.html
@@ -3,23 +3,63 @@
   <button class="btn btn-info" (click)="uploadTransactions()">Upload Transaction</button>
 </div>
 
-<table class="table table-bordered table-striped">
-  <thead class="thead-dark">
-  <tr>
-    <th scope="col">Id</th>
-    <th scope="col">Amount</th>
-    <th scope="col">Date</th>
-    <th scope="col">Transaction Type</th>
-    <th scope="col">Description</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let transaction of transactions">
-    <td>{{ transaction.id }}</td>
-    <td>{{ transaction.amount}}</td>
-    <td>{{ transaction.transactionDate}}</td>
-    <td>{{ transaction.type}}</td>
-    <td>{{ transaction.description}}</td>
-  </tr>
-  </tbody>
-</table>
+<div class="example-container mat-elevation-z8">
+  <div class="filter-form">
+
+    <mat-form-field >
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    <button mat-button color="primary" (click)="createNewGroupFromFilter($event.target.value)">Create Category</button>
+  </div>
+  <table mat-table [dataSource]="datasource" matSort (matSortChange)="sortData($event)">
+
+    <ng-container matColumnDef="Date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="transactionDate">Transaction Date Description</th>
+      <td mat-cell *matCellDef="let element">{{element.transactionDate | date}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="description">Description</th>
+      <td mat-cell *matCellDef="let element">{{element.description}}</td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="Type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="type">Transaction Type </th>
+      <td mat-cell *matCellDef="let element">{{element.type}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Amount">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="amount">Amount</th>
+      <td mat-cell *matCellDef="let element">{{element.amount | currency}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Category">
+      <th mat-header-cell *matHeaderCellDef >Category </th>
+      <td mat-cell *matCellDef="let element">{{element.category.name}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let element; columns: displayedColumns;"></tr>
+  </table>
+</div>
+<!--<table class="table table-bordered table-striped">-->
+<!--  <thead class="thead-dark">-->
+<!--  <tr>-->
+<!--    <th scope="col">Id</th>-->
+<!--    <th scope="col">Amount</th>-->
+<!--    <th scope="col">Date</th>-->
+<!--    <th scope="col">Transaction Type</th>-->
+<!--    <th scope="col">Description</th>-->
+<!--  </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--  <tr *ngFor="let transaction of transactions">-->
+<!--    <td>{{ transaction.id }}</td>-->
+<!--    <td>{{ transaction.amount}}</td>-->
+<!--    <td>{{ transaction.transactionDate}}</td>-->
+<!--    <td>{{ transaction.type}}</td>-->
+<!--    <td>{{ transaction.description}}</td>-->
+<!--  </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
