attach csv with account

--- a/frontEndClient/src/app/components/add-account/add-account.component.html
+++ b/frontEndClient/src/app/components/add-account/add-account.component.html
@@ -9,7 +9,7 @@
     <mat-form-field>
       <input matInput formControlName="accountTypeCtrl" required maxlength="100" type="string" placeholder="Provide a short purpose of this account">
     </mat-form-field>
-    <button mat-raised-button [color]="primary">Create</button>
+    <button mat-raised-button color="primary">Create</button>
   </form>
 </div>
 
