--- a/frontEndClient/src/app/components/account-overview/account-overview.component.html
+++ b/frontEndClient/src/app/components/account-overview/account-overview.component.html
@@ -1,9 +1,11 @@
-<mat-form-field>
-  <mat-label>Select Account</mat-label>
-  <mat-select required name="account_info" (selectionChange)="selectAccount(selectedAccount)" [(ngModel)]="selectedAccount">
-    <mat-option *ngFor="let account of accountList" [value]="account.id">{{account.name}}</mat-option>
-  </mat-select>
-</mat-form-field>
+<div>
+  <mat-form-field>
+    <mat-label>Select Account</mat-label>
+    <mat-select required name="account_info" (selectionChange)="selectAccount(selectedAccount)" [(ngModel)]="selectedAccount">
+      <mat-option *ngFor="let account of accountList" [value]="account.id">{{account.name}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 <div class="data-container">
   <div>
   <mat-card class="mat-card">
