--- a/frontEndClient/src/app/components/add-account/add-account.component.scss
+++ b/frontEndClient/src/app/components/add-account/add-account.component.scss
@@ -15,6 +15,8 @@
 
 .form-group-wrapper {
   margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
 }
 th.mat-sort-header-sorted {
   color: black;
