--- a/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontEndClient/src/app/components/transaction-list/transaction-list.component.html
@@ -1,6 +1,16 @@
 <div>
+  <div class="filter-form">
+    <mat-form-field>
+      <mat-label>Select Account</mat-label>
+      <mat-select required name="account_info" (selectionChange)="selectAccount(selectedAccount)" [(ngModel)]="selectedAccount">
+        <mat-option *ngFor="let account of accountList" [value]="account.id">{{account.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-button color="primary" (click)="showAddTransactionForm()" >Add New Transaction</button>
+  </div>
+  <div *ngIf="showAddNewTransactionForm">
   <form class="example-form" [formGroup]="newTransactionForm" (ngSubmit)="submitForm()">
-    <table cellspacing="0">
+    <table >
       <tr>
         <td>
           <mat-form-field>
@@ -39,7 +49,8 @@
       </tr>
     </table>
   </form>
-  <div class="example-container mat-elevation-z8">
+  </div>
+  <div class="example-container mat-elevation-z8" *ngIf="selectedAccount">
     <div class="filter-form">
 
     <mat-form-field >
@@ -69,6 +80,11 @@
       <ng-container matColumnDef="Amount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="amount">Amount</th>
         <td mat-cell *matCellDef="let element">{{element.amount | currency}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Category">
+        <th mat-header-cell *matHeaderCellDef >Category</th>
+        <td mat-cell *matCellDef="let element">{{element.category.shortDescription}}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
